src-java/testing/functional-tests/src/main/groovy/org/openkilda/functionaltests/error/LogicalPortNotCreatedExpectedError.groovy
package org.openkilda.functionaltests.error


import org.springframework.http.HttpStatus

import java.util.regex.Pattern

class LogicalPortNotCreatedExpectedError extends AbstractExpectedError{
    final static HttpStatus statusCode = HttpStatus.BAD_REQUEST

    LogicalPortNotCreatedExpectedError(String message, Pattern descriptionPattern) {
        super(statusCode, message, descriptionPattern)
    }
}
